--- a/src/App.scss
+++ b/src/App.scss
@@ -9,6 +9,9 @@ a:link ,:visited, :hover, :active{
   color: white;
   text-decoration: none;
 }
+h1 {
+  font-size: 10vw; 
+}
 .visually-hidden {
   visibility: hidden;
 }
