--- a/src/App.scss
+++ b/src/App.scss
@@ -35,14 +35,16 @@ h1 {
 ////////// App Level Card Styles /////////////////////////////////////
 ////////////////////////////////////////////////////////////////////*/
 .card {
-  box-shadow: 0px 5px 5px black;
+  backdrop-filter: blur( 7.5px ); 
   background-image: linear-gradient(
     to bottom, rgba(0,0,0,.5),
                rgba(0,0,0,.75),
                rgba(0,0,0,.5));
   border-radius: 5px;
+  box-shadow: 0px 5px 5px black;
   min-width: 400px;
   position: relative; min-height: 200px;
+  -webkit-backdrop-filter: blur( 7.5px );  
   z-index: 100;
   @media (max-width: 430px) {
     min-width: unset;}
@@ -53,9 +55,9 @@ h1 {
     text-align: left; 
     text-shadow: -5px 10px 10px black;
     @media (max-width: 430px) {
-      font-size: 5vh;}}
+      font-size: 3.75vh;}}
   h2{
-    font-size: 2.5vh;
+    font-size: 1.5rem;
     line-height: 1rem;
     padding-right: 1vw;
     text-align: right; 
@@ -70,7 +72,7 @@ h1 {
     text-align: left;
     padding-left: 1vw;
     padding-right: 1vw;
-    font-size: 2vh;}
+    font-size: 1rem;}
   .break {
     border-bottom: 2.5px solid white;
     box-shadow: -2.5px 7.5px 5px black;
