--- a/src/Components/TechStack/TechStack.scss
+++ b/src/Components/TechStack/TechStack.scss
@@ -5,7 +5,7 @@
     bottom: 0; 
     margin: auto;
     max-width: 85vw;
-    padding-bottom: 25vw;
+    padding-bottom: 50vh;
     padding-top: 5vw;
     position: -webkit-sticky;
     position: sticky; 
