--- a/src/Components/TechStack/TechStack.scss
+++ b/src/Components/TechStack/TechStack.scss
@@ -12,7 +12,9 @@
     text-align: center;
     text-shadow: -5px 15px 5px black;
     white-space: nowrap;
-    z-index: 200; }
+    z-index: 200; 
+    @media (max-width: 550px) {
+      max-width: 95vw;} }
 /*////////////////////////////////////////////////////////////////////
 ////////// Panel and Icon Adjustments ////////////////////////////////
 ////////////////////////////////////////////////////////////////////*/    
