styling new: add images and initial css animation for fog

--- a/src/App.scss
+++ b/src/App.scss
@@ -10,7 +10,7 @@ a:link ,:visited, :hover, :active{
 h1 {
   font-size: 10vw; 
   @media (max-width: 550px) {
-    font-size: 15vw; }  }
+    font-size: 7.5vh; }  }
 .visually-hidden {
   visibility: hidden;}
 /*////////////////////////////////////////////////////////////////////
