--- a/src/Components/Background/Background.scss
+++ b/src/Components/Background/Background.scss
@@ -50,3 +50,45 @@
     .middle-gradiated-background-layer {
         background-image: linear-gradient( 
           to bottom, rgba(0,0,0,0.5), 33%, rgba(0,0,0,.75), 66%, rgba(0,0,0,1));};}
+//
+
+.bg {
+  position: fixed;
+  z-index: -100;
+  width: 100%;
+  height: 130vh;
+  background-size: cover;
+  background-position: bottom;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.bg .fog {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+  pointer-events: none;
+}
+.bg .fog img {
+  position: absolute;
+  bottom: 0;
+  max-width: 100%;
+  animation: fog_effect calc(3s * var(--i)) ease-in infinite;
+}
+@keyframes fog_effect {
+  0% {
+    opacity: 0;
+    transform: scale(3);
+  }
+  25%,
+  75% {
+    opacity: .3;
+  }
+  100% {
+    transform: scale(6);
+    opacity: 0;
+  }
+}
